// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.DataTable bordered=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable bordered=true 1`] = `
<Table
  bordered={true}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkGrammar=false 1`] = `
<Table
  checkGrammar={false}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkGrammar=true 1`] = `
<Table
  checkGrammar={true}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkHighlight=false 1`] = `
<Table
  checkHighlight={false}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkHighlight=true 1`] = `
<Table
  checkHighlight={true}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkSpaces=false 1`] = `
<Table
  checkSpaces={false}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable checkSpaces=true 1`] = `
<Table
  checkSpaces={true}
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable className="my-classname" 1`] = `
<Table
  className="uu5-bricks-data-table my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable condensed=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable condensed=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  condensed={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable content="This is Content from ContentMixin" 1`] = `
<Table
  className="uu5-bricks-data-table"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable content=12345 1`] = `
<Table
  className="uu5-bricks-data-table"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable controlled=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable controlled=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable default props 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable disabled=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable disabled=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable dynamic=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable dynamic=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<Table
  className="uu5-bricks-data-table"
  footer={
    <div>
      Footer of section
    </div>
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable footerRow=["Monika","Katka","Karel"] 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr
      content={
        Array [
          <table-td
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Monika"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
          <table-td
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Katka"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
          <table-td
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Karel"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
        ]
      }
    />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<Table
  className="uu5-bricks-data-table"
  header={
    <div>
      Header of section
    </div>
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable headerRow=["Uchazeč(ka)","Nasazení","Přínos"] 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr
      content={
        Array [
          <table-th
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Uchazeč(ka)"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
          <table-th
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Nasazení"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
          <table-th
            className={null}
            colSpan={null}
            colorSchema={null}
            content="Přínos"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id={null}
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            rowSpan={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
        ]
      }
    />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable hidden=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable hidden=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable hover=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable hover=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  hover={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable id="myId" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable ignoreHTML=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable ignoreHTML=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="cs" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="de" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="en" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="en-gb" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="en-us" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="es" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="fr" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="ru" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="sk" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable language="uk" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="0" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="0"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="1" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="1"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="2" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="2"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="3" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="3"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="4" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="4"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="5" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="5"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level="6" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level="6"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=0 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={0}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=1 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=2 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={2}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=3 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={3}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=4 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={4}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=5 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={5}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable level=6 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  level={6}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable mainAttrs=undefined 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable name="myName" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="bigBox" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="bigBoxCollection" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="box" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="boxCollection" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="container" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="inline" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="page" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="smallBox" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="smallBoxCollection" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable nestingLevel="spa" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable noIndex=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable noIndex=true 1`] = `
<Table
  className="uu5-bricks-data-table uu5-noindex"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable pureRender=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable pureRender=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable selected=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable selected=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  selected={true}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable striped=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable striped=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  striped={true}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable style="padding:8px; borderRadius: 2px" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable style={"backgroundColor":"red","color":"blue"} 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable textCorrector=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  textCorrector={false}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable textCorrector=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  textCorrector={true}
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable tooltip="My Tooltip" 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="bigBoxCollection"
  tooltip="My Tooltip"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable underline=false 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;

exports[`UU5.Bricks.DataTable underline=true 1`] = `
<Table
  className="uu5-bricks-data-table"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <table-thead>
    <table-tr />
  </table-thead>
  <table-tbody>
    <table-tr
      key="0"
    >
      <table-td
        content="Eliška"
        key="0"
      />
      <table-td
        content="Vysoké"
        key="1"
      />
      <table-td
        content="Dostačující"
        key="2"
      />
    </table-tr>
  </table-tbody>
  <table-tfoot>
    <table-tr />
  </table-tfoot>
</Table>
`;
